<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.welcome.view.Welcome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/ilustrasi_orang_di_halaman_welcome"
            android:src="@drawable/peep_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           />


        <TextView
            android:id="@+id/titleswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:text="@string/selamat_datang_di_yu_story"
            android:alpha="0"
            tools:alpha="100"/>

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:alpha="0"
            tools:alpha="100"
            app:layout_constraintEnd_toEndOf="@+id/titleswitch"
            app:layout_constraintStart_toStartOf="@+id/titleswitch"
            app:layout_constraintTop_toBottomOf="@+id/titleswitch"
            android:text="@string/mau_berbagi_lifestyle_mu_dengan_orang_lain_di_yu_story_aja" />

        <Button
            android:id="@+id/loginPageBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/login"
            android:textStyle="bold"
            android:alpha="0"
            tools:alpha="100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            android:text="@string/text_btn_login" />

        <Button
            android:id="@+id/registerPageButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/register"
            android:textStyle="bold"
            android:alpha="0"
            tools:alpha="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            android:text="@string/text_btn_daftar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>